[tool.poetry]
name = "joseph-ztp"
version = "0.1.0"
description = ""
authors = ["Antoine Carnec <antoinecarnec@gmail.com>"]
readme = "README.md"
packages = [{include = "joseph_ztp"}]

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.9.3"
numpy = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
